--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,19 +2,17 @@ name: Deployment (Container)
 on:
   push:
     branches:
-      - main
-      - dev
       - master
-
+      - dev
 env:
   CACHE_KEY: node-deps
   MONGODB_DB_NAME: gha-demo
 jobs:
   test:
-    environment: testing
+    environment: testing1
     runs-on: ubuntu-latest
-    container:
-      image: node:16
+    # container:
+    #   image: node:16
     env:
       MONGODB_CONNECTION_PROTOCOL: mongodb
       MONGODB_CLUSTER_ADDRESS: 127.0.0.1:27017
@@ -27,8 +25,8 @@ jobs:
         ports:
           - 27017:27017
         env:
-          MONGODB_INITDB_ROOT_USERNAME: root
-          MONGODB_INITDB_ROOT_PASSWORD: example
+          MONGO_INITDB_ROOT_USERNAME: root
+          MONGO_INITDB_ROOT_PASSWORD: example
     steps:
       - name: Get Code
         uses: actions/checkout@v3
